[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/gameplay/RoundEnd.gd" type="Script" id=1]
[ext_resource path="res://scenes/menu/menu-theme.tres" type="Theme" id=2]
[ext_resource path="res://scenes/menu/help_me_medium.tres" type="DynamicFont" id=3]

[node name="RoundEnd" type="CanvasLayer"]
pause_mode = 2
layer = 128
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
pause_mode = 2
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -208.0
margin_top = -220.0
margin_right = 208.0
margin_bottom = 220.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -167.0
margin_top = -198.0
margin_right = 168.0
margin_bottom = 178.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="Panel/Margin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 329.0
margin_bottom = 366.0

[node name="Center" type="CenterContainer" parent="Panel/Margin/VBox"]
margin_right = 319.0
margin_bottom = 37.0

[node name="Label" type="Label" parent="Panel/Margin/VBox/Center"]
margin_left = 60.0
margin_right = 258.0
margin_bottom = 37.0
custom_colors/font_color = Color( 0.843137, 0.0588235, 0.0588235, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Round End"

[node name="Center2" type="CenterContainer" parent="Panel/Margin/VBox"]
margin_top = 45.0
margin_right = 319.0
margin_bottom = 45.0

[node name="HighScoreLabel" type="Label" parent="Panel/Margin/VBox/Center2"]
visible = false
margin_left = 82.0
margin_top = -10.0
margin_right = 236.0
margin_bottom = 9.0
custom_colors/font_color = Color( 0.843137, 0.0588235, 0.0588235, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "New High Score!"

[node name="BaseScore" type="HBoxContainer" parent="Panel/Margin/VBox"]
margin_top = 53.0
margin_right = 319.0
margin_bottom = 111.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="Panel/Margin/VBox/BaseScore"]
margin_top = 19.0
margin_right = 133.0
margin_bottom = 38.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Player Score: "

[node name="Value" type="Label" parent="Panel/Margin/VBox/BaseScore"]
margin_left = 141.0
margin_top = 19.0
margin_right = 150.0
margin_bottom = 38.0
custom_colors/font_color = Color( 0.843137, 0.0588235, 0.0588235, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "0"

[node name="BonusScore" type="HBoxContainer" parent="Panel/Margin/VBox"]
margin_top = 119.0
margin_right = 319.0
margin_bottom = 178.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="Panel/Margin/VBox/BonusScore"]
margin_top = 20.0
margin_right = 70.0
margin_bottom = 39.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Bonus: "

[node name="Value" type="Label" parent="Panel/Margin/VBox/BonusScore"]
margin_left = 78.0
margin_top = 20.0
margin_right = 87.0
margin_bottom = 39.0
custom_colors/font_color = Color( 0.843137, 0.0588235, 0.0588235, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "0"

[node name="MulitplierScore" type="HBoxContainer" parent="Panel/Margin/VBox"]
margin_top = 186.0
margin_right = 319.0
margin_bottom = 244.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="Panel/Margin/VBox/MulitplierScore"]
margin_top = 19.0
margin_right = 168.0
margin_bottom = 38.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Score Mulitplier: "

[node name="Value" type="Label" parent="Panel/Margin/VBox/MulitplierScore"]
margin_left = 176.0
margin_top = 19.0
margin_right = 195.0
margin_bottom = 38.0
custom_colors/font_color = Color( 0.843137, 0.0588235, 0.0588235, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "x1"

[node name="TotalScore" type="CenterContainer" parent="Panel/Margin/VBox"]
margin_top = 252.0
margin_right = 319.0
margin_bottom = 311.0
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/Margin/VBox/TotalScore"]
margin_left = 19.0
margin_top = 11.0
margin_right = 300.0
margin_bottom = 48.0

[node name="Label" type="Label" parent="Panel/Margin/VBox/TotalScore/HBoxContainer"]
margin_right = 256.0
margin_bottom = 37.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Total Score: "

[node name="Value" type="Label" parent="Panel/Margin/VBox/TotalScore/HBoxContainer"]
margin_left = 264.0
margin_right = 281.0
margin_bottom = 37.0
custom_colors/font_color = Color( 0.843137, 0.0588235, 0.0588235, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "0"

[node name="Buttons" type="CenterContainer" parent="Panel/Margin/VBox"]
margin_top = 319.0
margin_right = 319.0
margin_bottom = 356.0

[node name="HBox" type="HBoxContainer" parent="Panel/Margin/VBox/Buttons"]
margin_right = 319.0
margin_bottom = 37.0

[node name="Quit" type="Button" parent="Panel/Margin/VBox/Buttons/HBox"]
margin_right = 111.0
margin_bottom = 37.0
rect_clip_content = true
text = " Quit "

[node name="Continue" type="Button" parent="Panel/Margin/VBox/Buttons/HBox"]
margin_left = 119.0
margin_right = 319.0
margin_bottom = 37.0
rect_clip_content = true
text = " Continue "

[connection signal="pressed" from="Panel/Margin/VBox/Buttons/HBox/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Panel/Margin/VBox/Buttons/HBox/Continue" to="." method="_on_Continue_pressed"]
